--- a/.github/workflows/qqreads.yml
+++ b/.github/workflows/qqreads.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/FLychicken666/qqreadworkflow.git ~/JavaScript
+          git clone https://github.com/FLychicken666/qqreadworkflow.git ~/qqreadworkflow
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
